new feature added in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     <h3>Simple</h3>
                     <p>Easy to understand and modify</p>
                 </div>
+                <div class="feature-card">
+                    <h3>New Changes</h3>
+                    <p>This is New Version and Commit</p>
+                </div>
             </div>
         </section>
 
