changes done in index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                     <h3>New Changes</h3>
                     <p>This is New Version and Commit</p>
                 </div>
+                <div class="feature-card">
+                    <h3>Changes by other developer</h3>
+                    <p>the cloned code in new repo</p>
+                </div>
             </div>
         </section>
 
